--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,18 +7,24 @@
 -------------------------------------------------------------------*/
 
 
-/* 글로벌 변수 설정 */
+// 글로벌 변수 설정 
 $main-linkcolor: #666;
 $main-linkcolor-hover:#008cba;
+$main-linkcolor-active:#008cba;
 
 $primary-color: #008cba;
 
 
-/* 여백,간격 */
+// 여백,간격 
 $width-default: 1200px;
 $gutter-default: 20px;
+
+
+//폼
+$fm-height: 40px;
+
  
-/* 컬러 */
+// 컬러 
 $color-basic: #333;
 $color-primary: #0089b3;
 $color-primary-dark: #006d8e;
@@ -37,7 +43,7 @@ $media-tablet: 1024px;
 $media-mobiedefault: 768px;
 
 //폰트 사이즈
-$font-size-base:          14px;
+$font-size-base:          16px;
 $font-size-large:         ceil(($font-size-base * 1.25)); // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)); // ~12px
 
@@ -47,5 +53,16 @@ $font-size-h3:            ceil(($font-size-base * 1.7)); // ~24px
 $font-size-h4:            ceil(($font-size-base * 1.25)); // ~18px
 $font-size-h5:            $font-size-base;
 $font-size-h6:            ceil(($font-size-base * 0.85)); // ~12px
+
+//border
+
+$border-default: 1px solid #ccc;
+
+
+//table 
+$table-cell-padding: 10px 5px;
+$tbl-hover-color:#333;
+
+
 
 $known-prefixes: webkit, moz, ms, o;
