--- a/css/layout.css
+++ b/css/layout.css
@@ -138,3 +138,5 @@ fieldset.guide legend {position:static !important;left:0 !important;top:0 !impor
 	.table-list th{font-size:1.3rem;}
 	.table-list td{font-size:1.3rem;}
 }
+
+.typograp-wrap {max-width:900px;}
