--- a/scss/itg.scss
+++ b/scss/itg.scss
@@ -2,19 +2,16 @@
 
 @import "_variables";
 @import "_mixin";
-@import "_pagtation";
-@import "_board";
 
 
 /* 공통요소 */
 
 .multiline-ellips {@include multiline(3, 80%, 50px);overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
-.box { @include border-radius(10px); }
+.box { @include border-radius(10px);border:$border-default; }
 
 
 /* 버튼 */
 .btn { @include btn-basic (8px 18px,#666,#fff);display: inline-block;font-size: 16px;text-align: center;vertical-align: middle;border:1px solid #ccc;}
-
 .mini-btn-blue {
   @include btn-basic (3px 5px,#fff,#095084);font-size: 13px;
 }
@@ -27,8 +24,6 @@
 .small-btn-orange {
   @include btn-basic (5px 13px,#fff,#d57504);
 }
-
-
 .btn-blue {
   @include btn-basic (8px 18px,#fff,#095084);
 }
@@ -44,34 +39,51 @@
 }
 
 /* 테이블 */
-.table {width:100%;border-spacing: 0;border-collapse: collapse;
-      thead th {height:45px;text-align:center;vertical-align: middle;}
-      tbody td {text-align:center;vertical-align: middle;}
+.table { 
+      @include tbl-common;
+      thead th,
+      tbody td
+      tfoot td {text-align:center;vertical-align: middle;}
 }
 .table-list {border-top:2px solid #2b2b2b;
-    thead th {background: #d8deea;border:1px solid #cbcbcb;font-weight:500;color:#000;}
-    tbody td {padding:10px 5px;border:1px solid #cbcbcb;font-weight:500;color:#000;}
+    thead tr th,
+    tbody tr td,
+    tfoot tr td {padding: $table-cell-padding;}
+    thead tr th {
+                @include basic-th (700,#000,#d8deea);
+                border: $border-default;
+;               }
+    tbody tr td {
+                @include basic-td (700,#000,16px);
+                border: $border-default;
+              }
     tr:hover {
-			background-color: #333333;
+			 background-color: $tbl-hover-color;
 			th, td {				
-				background-color: #333;
+				background-color: $tbl-hover-color;
 			}
 		}
 }
-.table-body-only {border-top:2px solid #2b2b2b;
-  tbody th {background: #d8deea;border:1px solid #cbcbcb;font-weight:500;color:#000;}
-  tbody td {padding:10px 5px;border:1px solid #cbcbcb;font-weight:500;color:#000;}
-}
-
-
-
+.table-body-only {
+                  @include border('top', 2px, solid, #2b2b2b);
+                  tbody th {
+                            @include body-tblbasic-th (700,#000,#d8deea);
+                            border: $border-default;
+                          }
+                  tbody td {
+                          @include body-tblbasic-td (700,#000,#d8deea);          
+                          border: $border-default;          
+                        }
+                }
 
 /* 폼 */
 .form-wrap {display:inline-block;}
-.input-wrap {display:inline-block;width:45%;height:40px;border:1px solid #ccc;}
+.input-wrap {display:inline-block;width:45%;height:$fm-height;border: $border-default;}
 .input-wrap .input-text {width:100%;height:100%;text-indent: 10px;}
 
-.select-wrap {display:inline-block;width:45%;height:40px;border:1px solid #ccc;}
-.select-wrap .input-select {width:100%;height:100%;text-indent: 10px;background: url();}
+.select-wrap {display:inline-block;width:45%;height:$fm-height;border: $border-default;}
+.select-wrap .input-select {width:100%;height:100%;text-indent: 10px;@include bgimage(arrow);}
 
 
+@import "_pagtation";
+@import "_board";
