--- a/scss/_pagtation.scss
+++ b/scss/_pagtation.scss
@@ -1,18 +1,37 @@
 @charset "UTF-8";
 
 /* 페이징1 */
-.paging{margin-top:40px;text-align:center;}
-.paging>.page{display:inline-block;width:36px;height:36px;border:1px solid #cdcdcd;font-size:15px;color:#4d4d4d;line-height:34px;text-align:center;vertical-align:middle;}
-.paging>.page:hover,
-.paging>.page:focus,
-.paging>.page.on{background:#18a2dc;border-color:#18a2dc;font-weight:normal;color:#fff;}
-.paging>.page:first-child{margin-left:0;}
-.paging>.btn{position:relative;}
-.paging>.btn:after{display:block;position:absolute;top:50%;left:50%;width: 14px;height: 16px;background: url(../img/common/sp_ico.png) no-repeat 0 0;-ms-transform:translate(-50%, -50%);-webkit-transform:translate(-50%, -50%);transform:translate(-50%, -50%);content:"";}
-.paging>.prev_all:after{width: 21px;background-position: 2px -70px;}
-.paging>.prev:after{background-position: -20px -70px;}
-.paging>.next_all:after{width: 20px;background-position: -46px -70px;}
-.paging>.next:after{background-position: -32px -70px;}
+.paging {
+        @include be-margin(40px);      
+        text-align:center;
+        >.page {
+          display:inline-block;text-align:center;vertical-align:middle;
+          @include page-common (36px,36px,$page-border,15px,#4d4d4d,34px)
+        }      
+        >.page:hover,
+        >.page:focus,
+        >.page.on{
+          @include be-active (#18a2dc,$page-border-active,300,#fff)
+         }        
+         >.page:first-child{margin-left:0;}
+         >.btn{position:relative;}
+         >.btn:after{
+            display:block;
+            position:absolute;
+            top:50%;
+            left:50%;           
+            @include size (14px,16px);
+            @include bgimage (sp_ico);
+            @include translate(50%, 50%);
+            content:"";}
+         >.prev_all:after{width: 21px;background-position: 2px -70px;}
+         >.prev:after{background-position: -20px -70px;}
+         >.next_all:after{width: 20px;background-position: -46px -70px;}
+         >.next:after{background-position: -32px -70px;}         
+      }
+
+
+
 
 
 @media screen and (max-width:1239px){
@@ -24,7 +43,7 @@
     .paging>.next:after{}
 }
 @media screen and (max-width:$media-mobiedefault){
-    .paging{margin-top:20px;font-size:0;text-align:center;}
+    .paging{margin-top:20px;text-align:center;}
     .paging>.page{width:26px;height:26px;margin-left:4px;font-size:1.6rem;line-height:24px;}
     .paging>.btn:after{width:8px;height:9px;background: url(../img/common/sp_ico_res.png) no-repeat 0 0;background-size: 150px auto;}
     .paging>.prev_all:after{width:10px;background-position:-52px -42px;}
@@ -34,17 +53,29 @@
 }
 
 /* 페이징2 */
-.paginate{margin-top:25px;font-size:0;text-align:center;}
-.paginate a{display:inline-block;width:36px;height:36px;margin:0 2px;border: 1px solid #ccc;vertical-align: middle;}
-.paginate a span{width:36px;height:36px;vertical-align:middle;}
+.paginate{
+  @include be-margin(25px);  
+  text-align:center;}
+ 
+.paginate a{
+            display:inline-block;
+            @include page-common (36px,36px,$page-border,16px,#666,36px);  
+            margin:0 2px;vertical-align: middle;}
+.paginate a span{
+            @include size (36px,36px);
+            vertical-align:middle;}
 .paginate .sp_start{background-position:-22px -306px;}
 .paginate .sp_finish{background-position:-136px -306px;}
 .paginate .sp_prev{background-position:-60px -306px;}
 .paginate .sp_next{background-position:-98px -306px;}
-.paginate .paginate_input_wrap{display:inline-block;margin:0 6px 0 14px;font-size:18px;font-weight:700;color:#575757;vertical-align: middle;}
-.paginate .paginate_input{display:inline-block;width:27px;height:34px;margin-right:6px;border: 1px solid #ccc;font-size:18px;font-weight:700;color:#575757;text-align:center;}
+.paginate .paginate_input_wrap{display:inline-block;
+            @include ft-option (18px,700,#575757,0 6px 0 14px);  
+            vertical-align: middle;}
+.paginate .paginate_input{display:inline-block;
+          @include ft-option (18px,700,#575757,0 6px 0 0);  
+          border: $border-default;text-align:center;}          
 .paginate .total_num{margin-right:14px;}
-.paginate .btn_page_go{width:57px;height:36px;background:#3980b2;font-weight:500;color:#fff;line-height:36px;}
+.paginate .btn_page_go {width:57px;height:36px;background:#3980b2;font-weight:500;color:#fff;line-height:36px;}
 
 @media screen and (max-width:767px) {
   .paginate{margin-top:13px;}
