--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,13 +12,14 @@ $main-linkcolor: #666;
 $main-linkcolor-hover:#008cba;
 $main-linkcolor-active:#008cba;
 
+$point-color: #ff0000;
 $primary-color: #008cba;
 
 
 // 여백,간격 
 $width-default: 1200px;
 $gutter-default: 20px;
-
+$bx-padding:30px;
 
 //폼
 $fm-height: 40px;
@@ -47,16 +48,18 @@ $font-size-base:          16px;
 $font-size-large:         ceil(($font-size-base * 1.25)); // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)); // ~12px
 
-$font-size-h1:            floor(($font-size-base * 2.6)); // ~36px
-$font-size-h2:            floor(($font-size-base * 2.15)); // ~30px
-$font-size-h3:            ceil(($font-size-base * 1.7)); // ~24px
-$font-size-h4:            ceil(($font-size-base * 1.25)); // ~18px
+$font-size-h1:            floor(($font-size-base * 2.8)); // ~36px
+$font-size-h2:            floor(($font-size-base * 2.3)); // ~30px
+$font-size-h3:            ceil(($font-size-base * 2)); // ~24px
+$font-size-h4:            ceil(($font-size-base * 1.75)); // ~18px
 $font-size-h5:            $font-size-base;
 $font-size-h6:            ceil(($font-size-base * 0.85)); // ~12px
 
 //border
 
 $border-default: 1px solid #ccc;
+$page-border: 1px solid #ccc;
+$page-border-active: 1px solid #ccc;
 
 
 //table 
