--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -40,6 +40,7 @@ $color-info: #949494;
 
 
 //미디어 쿼리 설정
+$media-notebook: 1239px;
 $media-tablet: 1024px;
 $media-mobiedefault: 768px;
 
@@ -61,6 +62,7 @@ $border-default: 1px solid #ccc;
 $page-border: 1px solid #ccc;
 $page-border-active: 1px solid #ccc;
 
+$pgwd : 20px;
 
 //table 
 $table-cell-padding: 10px 5px;
