--- a/scss/_pagtation.scss
+++ b/scss/_pagtation.scss
@@ -27,30 +27,35 @@
          >.prev_all:after{width: 21px;background-position: 2px -70px;}
          >.prev:after{background-position: -20px -70px;}
          >.next_all:after{width: 20px;background-position: -46px -70px;}
-         >.next:after{background-position: -32px -70px;}         
+         >.next:after{background-position: -32px -70px;}  
+         @include breakpoint(notebook) {
+          >.page{
+            @include page-common (42px,42px,$page-border,2.2rem,#4d4d4d,40px)
+            }
+          >.btn:after{
+            @include size (12px,18px);
+            }
+          >.prev_all:after{width:$pgwd;}
+          >.next_all:after{width:$pgwd;}          
+         }
+         @include breakpoint(mobiedefault) {
+          @include be-margin(20px);  
+         }
+         >.page {
+          @include page-common (26px,26px,$page-border,1.6rem,#4d4d4d,24px)
+          margin-left:4px;
+         }
+         >.btn:after{
+          @include size(8px,9px);
+          @include bgimage (sp_ico_res,$position:0 0,$repeat: no-repeat);
+          background-size: 150px auto;
+          }
+         >.prev_all:after{width:10px;background-position:-52px -42px;}
+         >.prev:after{background-position:-62px -42px;}
+         >.next_all:after{width:10px;background-position:-58px -52px;}
+         >.next:after{background-position:-50px -52px;}         
       }
 
-
-
-
-
-@media screen and (max-width:1239px){
-    .paging>.page{width:42px;height:42px;font-size:2.2rem;line-height:40px;}
-    .paging>.btn:after{width:12px;height:18px;}
-    .paging>.prev_all:after{width:20px;}
-    .paging>.prev:after{}
-    .paging>.next_all:after{width:20px;}
-    .paging>.next:after{}
-}
-@media screen and (max-width:$media-mobiedefault){
-    .paging{margin-top:20px;text-align:center;}
-    .paging>.page{width:26px;height:26px;margin-left:4px;font-size:1.6rem;line-height:24px;}
-    .paging>.btn:after{width:8px;height:9px;background: url(../img/common/sp_ico_res.png) no-repeat 0 0;background-size: 150px auto;}
-    .paging>.prev_all:after{width:10px;background-position:-52px -42px;}
-    .paging>.prev:after{background-position:-62px -42px;}
-    .paging>.next_all:after{width:10px;background-position:-58px -52px;}
-    .paging>.next:after{background-position:-50px -52px;}
-}
 
 /* 페이징2 */
 .paginate{
