--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,6 +16,7 @@ $point-color: #ff0000;
 $primary-color: #008cba;
 
 
+
 // 여백,간격 
 $width-default: 1200px;
 $gutter-default: 20px;
@@ -23,7 +24,7 @@ $bx-padding:30px;
 
 //폼
 $fm-height: 40px;
-
+$fm-bgcolor : #fff;
  
 // 컬러 
 $color-basic: #333;
@@ -64,9 +65,12 @@ $page-border-active: 1px solid #ccc;
 
 $pgwd : 20px;
 
+$boardthcolor : #1d262d;
+
 //table 
 $table-cell-padding: 10px 5px;
 $tbl-hover-color:#333;
+
 
 
 
