--- a/scss/itg.scss
+++ b/scss/itg.scss
@@ -1,126 +1,9 @@
 @charset "UTF-8";
-
 @import "_variables";
 @import "_mixin";
-
-
-/* 공통요소 */
-
-.multiline-ellips {@include multiline(3, 80%, 50px);overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
-.box { @include border-radius(0px);border:$border-default;padding:$bx-padding;}
-
-
-/* 버튼 */
-.btn { 
-    @include btn-basic (8px 18px,#666,#fff);
-    display: inline-block;text-align: center;vertical-align: middle;border:1px solid #ccc;}
-.mini-btn-blue {
-  @include btn-basic (3px 5px,#fff,#095084);font-size: 13px;
-}
-.mini-btn-orange {
-  @include btn-basic (3px 5px,#fff,#d57504);font-size: 13px;
-}
-.small-btn-blue {
-  @include btn-basic (5px 13px,#fff,#095084);
-}
-.small-btn-orange {
-  @include btn-basic (5px 13px,#fff,#d57504);
-}
-.btn-blue {
-  @include btn-basic (8px 18px,#fff,#095084);
-}
-.btn-orange {
-  @include btn-basic (8px 18px,#fff,#d57504);
-}
-
-.larger-btn-blue {
-  @include btn-basic (15px 25px,#fff,#095084);
-}
-.larger-btn-orange {
-  @include btn-basic (15px 25px,#fff,#d57504);
-}
-
-/* 제목 스타일 */
-.pagetit-h1 {font-size:$font-size-h1;color:$color-primary-light;font-weight: 700;}
-.pagetit-h2 {font-size:$font-size-h2;color:$color-primary-light;font-weight: 700;}
-.pagetit-h3 {font-size:$font-size-h3;color:$color-primary-light;font-weight: 700;}
-.pagetit-h4 {font-size:$font-size-h4;color:$color-primary-light;font-weight: 700;}
-.pagetit-h5 {font-size:$font-size-h5;color:$color-primary-light;font-weight: 700;}
-.pagetit-h6 {font-size:$font-size-h6;color:$color-primary-light;font-weight: 700;}
-
-.subpage-tit {
-  @include ft-option (18px,700,#2b2b2b,10px 0);
-}
-
-/* 테이블 */
-.table { 
-      @include tbl-common;
-      thead th,
-      tbody td
-      tfoot td {text-align:center;vertical-align: middle;}
-}
-.table-list {border-top:2px solid #2b2b2b;
-    thead tr th,
-    tbody tr td,
-    tfoot tr td {padding: $table-cell-padding;}
-    thead tr th {
-                @include basic-th (700,#000,#d8deea);
-                border: $border-default;
-;               }
-    tbody tr td {
-                @include basic-td (700,#000,16px);
-                border: $border-default;
-              }
-    tr:hover {
-			 background-color: $tbl-hover-color;
-			th, td {				
-				background-color: $tbl-hover-color;
-			}
-		}
-}
-.table-body-only {
-                  @include border('top', 2px, solid, #2b2b2b);
-                  tbody th {
-                            @include body-tblbasic-th (700,#000,#d8deea);
-                            border: $border-default;
-                          }
-                  tbody td {
-                          @include body-tblbasic-td (700,#000,#d8deea);          
-                          border: $border-default;          
-                        }
-                }
-
-/* 폼 */
-.from-common {width:100%;height:100%;text-indent: 10px;}
-.form-wrap {display:inline-block;}
-.input-wrap {display:inline-block;width:45%;height:$fm-height;border: $border-default;
-  .input-text {
-    @extend .from-common;
-  }
-}
-.select-wrap {display:inline-block;width:45%;height:$fm-height;border: $border-default;
-  .input-select {
-    @extend .from-common;
-    @include bgimage(arrow);
-  }
-}
-/* list */
-.list-ul {
-  @include be-margin (30px);
-  > li {position:relative;
-    @include list-ul-li (6px 0,#333,18px,12px);
-    &:before {content:'';display:inline-block;
-              @include list-li-before (0,9,4px,4px,100%);
-              position:absolute;background:#1075c0;}
-              .point {color:$point-color;}      
-             > ul {
-               @include be-margin (10px);
-             }       
-             > ul > li {
-              @include list-ul-li (6px 0,#333,16px,0);
-              }
-  }
-}
-
+/*공통요소 폼,테이블기본,버튼 */
+@import "_common";
+/* 게시판 유형 */
 @import "_board";
+/* 페이징 */
 @import "_pagtation";
