--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -70,7 +70,8 @@ $boardthcolor : #1d262d;
 //table 
 $table-cell-padding: 10px 5px;
 $tbl-hover-color:#333;
-
+$board-tdline : 1px solid #e1e1e1;
+$trhover : #f7f8fe;
 
 
 
